feat(csrf): enable CSRF protection for forms and add token validation in registration process to enhance security fix(bundles.php): allow DebugBundle to be used in test environment for better debugging during tests chore(framework.yaml): update session configuration to set handler_id to null and cookie_secure to auto for improved session management feat(registration): add CSRF token field to registration form to prevent CSRF attacks style(register.html.twig): format code and add CSRF token field rendering in registration form for better user experience

--- a/config/packages/csrf.yaml
+++ b/config/packages/csrf.yaml
@@ -1,11 +1,13 @@
-# Enable stateless CSRF protection for forms and logins/logouts
+# config/packages/csrf.yaml
 framework:
     form:
         csrf_protection:
-            token_id: submit
-
+            enabled: true
+            field_name: _token
     csrf_protection:
-        stateless_token_ids:
-            - submit
-            - authenticate
-            - logout
+        enabled: true
+
+when@test:
+    framework:
+        csrf_protection:
+            enabled: false
